# perlica-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  changelog.md
.github/workflows/: rust.yml
assets/config/level_data/: map01_lv001_lv_data_sub01.json
assets/tables/: Character.json  EnemySpawns.json  Equip.json  I18nTextTable_EN.json  Index.json  Item.json  SkillPatchTable.json  TextTable.json  Weapon.json
lib/codegen/: Cargo.toml
lib/common/: Cargo.toml
lib/config/: Cargo.toml
lib/db/: Cargo.toml
lib/logic/: Cargo.toml
lib/muip/: Cargo.toml
lib/proto/: Cargo.toml  build.rs
servers/config-server/: Cargo.toml
servers/game-server/: Cargo.toml  config.default.toml
servers/game-server/src/: error.rs  gm.rs  handler.rs  main.rs  player.rs  sconfig.rs  session.rs
servers/game-server/src/handlers/: bitset.rs  char_bag.rs  character.rs  equip.rs  factory.rs  gm.rs  heartbeat.rs  login.rs  mail.rs  mission.rs  mod.rs  movement.rs  ping.rs  scene.rs  unlock.rs  wallet.rs  weapon.rs
servers/game-server/src/handlers/character/: battle.rs  mod.rs  progression.rs  skill.rs  team.rs
servers/game-server/src/handlers/scene/: dialog.rs  entity.rs  level_script.rs  load.rs  mod.rs  revival.rs  teleport.rs
servers/game-server/src/handlers/weapon/: breakthrough.rs  equip.rs  exp.rs  gem.rs  mod.rs
servers/game-server/src/net/: context.rs  mod.rs  notify.rs  registry.rs  router.rs  session.rs
servers/game-server/src/player/: char_bag.rs  mod.rs
servers/muip-server/: Cargo.toml
servers/muip-server/res/: index.html
servers/muip-server/src/: main.rs
(+44 files in other folders)
