[package]
name = "perlica-game-server"
edition.workspace = true
version.workspace = true


[dependencies]
perlica-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
common.workspace = true
config.workspace = true
perlica-logic.workspace = true
perlica-db.workspace = true
byteorder.workspace = true
toml.workspace = true
perlica-muip.workspace = true
