[package]
name = "perlica-muip-server"
edition.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
common.workspace = true
perlica-muip.workspace = true
toml.workspace = true
